--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root">
-      <h1>Hello world!</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>Caesar Cipher</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="root">
+    <div id="contenedor">
+      <p>Bienvenido al CODEx</p>
+      <div id="formulario">
+        <label for="desplazamiento">Nivel de cifrado:</label>
+        <input type="number" id="name" name="desplazamiento" min="3" max="10" required>
+        <br>
+        <textarea name="informe" rows="10" cols="50" placeholder="Hola ingresa el informe/mensaje a encriptar/desencriptar"></textarea>
+        <br>
+          <button accesskey="e" type="button">Encriptar</button>
+        <button accesskey="e" type="button">Desencriptar</button>
+        <br>
+        <textarea name="temporal" rows="8" cols="40" >resultado</textarea>
+        
+      </div>
+
     </div>
-    <script src="index.js" type="module"></script>
-  </body>
+  </div>
+  <script src="index.js" type="module"></script>
+</body>
+
 </html>
