--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
       <br>
       <div id="formulario">
         <label for="desplazamiento">Nivel de cifrado:</label>
-        <input type="number" id="desplazar" name="desplazamiento" value="3" min="3" max="10" required>
+        <input type="number" id="desplazar" name="desplazamiento"  min="3" max="35" required>
         <br><br>
-        <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Hola ingresa el informe/mensaje a encriptar/desencriptar">casa</textarea>
+        <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Hola ingresa el informe/mensaje a encriptar/desencriptar"></textarea>
         <br>
           <button id="cifrar" class="BtnCipher" accesskey="e"  type="button">Cifrar</button>
-        <button class="BtnCipher" accesskey="d" type="button">Descifrar</button>
+        <button id="descifrar" class="BtnCipher" accesskey="d" type="button">Descifrar</button>
         <br><br>
         <textarea  id="temporal" rows="8" cols="40" placeholder="Mensaje cifrado/descifrado"></textarea>
         
