--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Caesar Cipher</title>
+  <title>Cesar Cipher</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -16,20 +16,56 @@
       <br>
       <div id="formulario">
         <label for="desplazamiento">Nivel de cifrado:</label>
-        <input type="number" id="desplazar" name="desplazamiento"  min="3" max="35" required>
+        <input type="number" id="desplazar" name="desplazamiento" value="3" min="3" max="35" required>
         <br><br>
-        <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Hola ingresa el informe/mensaje a encriptar/desencriptar"></textarea>
+        <!--<p >Ingresa el informe/mensaje a encriptar/desencriptar:</p>-->
+        <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Informe/mensaje a encriptar/desencriptar"></textarea>
         <br>
-          <button id="cifrar" class="BtnCipher" accesskey="e"  type="button">Cifrar</button>
-        <button id="descifrar" class="BtnCipher" accesskey="d" type="button">Descifrar</button>
-        <br><br>
-        <textarea  id="temporal" rows="8" cols="40" placeholder="Mensaje cifrado/descifrado"></textarea>
-        
+          <button id="cifrar" class="boton" accesskey="e"  type="button">Cifrar</button>
+          <button id="limpiar" class="boton" accesskey="l"  type="button"><i class="fas fa-eraser"></i></button>
+        <button id="descifrar" class="boton" accesskey="d" type="button">Descifrar</button>
       </div>
 
     </div>
   </div>
+
+<!--Modal para cifrar-->
+
+<div class="fondoTransparente">
+  <div class="modal">
+      <div class="modal_cerrar">
+          <span>x</span>
+      </div>
+      <div class="modal_titulo">Mensaje Cifrado</div>
+      <div class="modal_mensaje">
+        <br>
+        <textarea  id="resultado" rows="8" cols="40" placeholder="Mensaje cifrado/descifrado"></textarea>
+      </div>
+      <div class="modal_botones">
+          <button class="boton" id="copiarResultado">COPIAR TEXTO</button>
+      </div>
+  </div>
+</div> 
+<!--Modal para Descifrar-->
+<div class="fondoTransparente">
+  <div class="modal">
+      <div class="modal_cerrar">
+          <span>x</span>
+      </div>
+      <div class="modal_titulo">Mensaje Descifrado</div>
+      <div class="modal_mensaje">
+        <br>
+        <textarea  id="resultadoDescifrado" rows="8" cols="40" placeholder="Mensaje cifrado/descifrado"></textarea>
+      </div>
+      <div class="modal_botones">
+          <button class="boton" id="copiarDescifrado">COPIAR TEXTO</button>
+      </div>
+  </div>
+</div> 
+
   <script src="index.js" type="module"></script>
+
 </body>
+
 
 </html>
