--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,18 @@
 <body >
   <div id="root">
     <div id="contenedor">
-      <h3>Bienvenido a CODEx</h3>
+      <h1 id="titulo">Bienvenido a CODEx</h1>
       <br>
       <div id="formulario">
-        <label for="desplazamiento">Nivel de cifrado:</label>
-        <input type="number" id="desplazar" name="desplazamiento" value="3" min="3" max="35" required>
+        <label>Nivel de cifrado:</label>
+        <input type="number" id="desplazar" name="desplazamiento" value="3" min="3" max="35">
         <br><br>
         <!--<p >Ingresa el informe/mensaje a encriptar/desencriptar:</p>-->
-        <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Informe/mensaje a encriptar/desencriptar"></textarea>
+        <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Informe/mensaje a encriptar/desencriptar" ></textarea>
         <br>
-          <button id="cifrar" class="boton" accesskey="e"  type="button">Cifrar</button>
-          <button id="limpiar" class="boton" accesskey="l"  type="button"><i class="fas fa-eraser"></i></button>
-        <button id="descifrar" class="boton" accesskey="d" type="button">Descifrar</button>
+          <button id="cifrar" class="boton" accesskey="e"  >Cifrar</button>
+          <button id="limpiar" class="boton" accesskey="l" ><i class="fas fa-eraser"></i></button>
+        <button id="descifrar" class="boton" accesskey="d" >Descifrar</button>
       </div>
 
     </div>
