--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,15 @@
 
 </head>
 
-<body>
+<body class="no_scroll">
   
+  <button id="mensaje">Info</button>
     <div id="contenedor">
       <h1 id="titulo">Bienvenido a CODEx</h1>
 
       <section id="formulario">
         <label>Nivel de cifrado:</label>
         <input type="number" id="desplazar" value="3" min="3" max="35">
-        <!--<p >Ingresa el informe/mensaje a encriptar/desencriptar:</p>-->
         <textarea name="informe" id="texto" rows="10" cols="60" placeholder="Informe/mensaje a encriptar/desencriptar"></textarea>
         <button id="cifrar" class="boton" >Cifrar</button>
         <button id="limpiar" class="boton"><i class="fas fa-eraser"></i></button>
@@ -26,6 +26,7 @@
       </section>
 
   </div>
+
 
   <!--Modal para cifrar-->
 
@@ -65,5 +66,5 @@
 
 </body>
 
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
